# DuckDB-QVD-Extension

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rust-toolchain.toml
QVD-Examples/: Orders.qvd  Products.qvd  Ventes.qvd
community-extension/: description.yml
scripts/: build-extension.sh
src/: copy.rs  copy_from.rs  lib.rs  qvd.rs  wasm_lib.rs
test/data/: README.md
test/sql/: qvd.test  read_qvd.test
