[package]
name = "qvd"
version = "1.0.1"
edition = "2021"
description = "Extension DuckDB pour lire les fichiers Qlik QVD via OpenQVD"
license = "Apache-2.0"

[lib]
# cdylib : extension chargeable DuckDB. rlib : permet `cargo test`.
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type ne peut pas (pour l'instant) être surchargé par cible.
# src/wasm_lib.rs réexporte src/lib.rs pour passer de cdylib (compilation
# native) à staticlib (nécessaire pour le linkage final via emcc en Wasm).
name = "qvd"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
# Plomberie de l'extension DuckDB (table functions, VTab, entrypoint C-API).
duckdb = { version = "=1.10504.0", features = ["loadable-extension"] }

# Lecture QVD : reader streaming à mémoire bornée (open_qvd_stream/next_chunk).
# Renommé pour éviter la collision avec le nom de package "qvd" ci-dessus.
qvdrs = { package = "qvd", version = "0.7" }

# Écriture QVD : writer avec contrôle fin des tags/valeurs (utilisé par COPY TO).
openqvd = "1"

# Expansion des motifs glob (read_qvd('data/*.qvd')).
glob = "0.3"
